# bcp-exorcist

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yaml  release.yml
src/: lib.rs  reader.rs
