[package]
name = "bcp-exorcist"
version = "0.1.0"
edition = "2021"

[lib]
name = "bcp_exorcist"
crate-type = ["cdylib"]

[dependencies]
memchr = "2.7.4"
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.24.1", features = ["extension-module", "generate-import-lib", "abi3-py39"] }

[profile.release]
lto = true

[dev-dependencies]
rstest = "0.25.0"
